# Aio-okie2.0

./: .gitignore  CMakeLists.txt  README.md  config.json  start-now  start-web.sh
include/: ide.h
src/: editor.cpp  language_support.cpp  main.cpp  ui_components.cpp
templates/: index.html
web/: app.py  colab_runner.py  config.json
